tests/invalid/fstring_ascii_class_missing_magic/main.py
class NoAscii:
    value: int

    def __init__(self, value: int) -> None:
        self.value = value


def run_case() -> None:
    s: str = f"{NoAscii(1)!a}"
    print(s)


if __name__ == "__main__":
    run_case()
